--- a/week05/client/package.json
+++ b/week05/client/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "firebase": "^9.12.1"
   },
   "devDependencies": {
     "parcel": "^2.7.0",
